--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 
+p {
+  display: block;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: 0;
+}
 .flex-container{
   display: flex;
   flex-direction:row;
