--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ background-position:bottom;
 #aboutme{
     
   font-family:-Roboto,Open Sans,apple-system, BlinkMacSystemFont, 'Segoe UI',  Oxygen, Ubuntu, Cantarell;
-  background-color:white;
+  background-color:#595959;
     color:black;
     opacity:0.9;
     text-align:center;
@@ -79,7 +79,7 @@ background-position:bottom;
 }
 #projects{
   font-family:-Roboto,Open Sans,apple-system, BlinkMacSystemFont, 'Segoe UI',  Oxygen, Ubuntu, Cantarell ;  
-  background-color:white;
+  background-color:#595959;
     color:black;
     opacity:0.9;
     /*text-align:center;*/
