--- a/style.css
+++ b/style.css
@@ -73,9 +73,9 @@ background-position:bottom;
     text-align:center;
     padding:20px;
     margin-top:10px;
-    margin:auto;
+    margin-bottom:10px;
     
-    font-size: 16px;
+    font-size: 12px;
     font-variant-caps: all-petite-caps;
     width:100%;
     box-sizing: border-box;
@@ -89,9 +89,9 @@ background-position:bottom;
     /*text-align:center;*/
     padding:20px;
     margin-top:10px;
-    margin:auto;
+    margin-bottom:10px;
     
-    font-size: 16px;
+    font-size: 12px;
     font-variant-caps: all-petite-caps;
     width:100%;
     box-sizing: border-box;
@@ -115,7 +115,7 @@ font-variant-caps: all-petite-caps;
 background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: top;
-
+font-size: 12px;
 /*color:#fff;
 font-family: Lucidatypewriter, monospace;
 font-size: 16px;
