--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ background-color:black;
 background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: top;
-
+font-size: 12px;
 color:#fff;
 font-family:-Roboto, 'Open Sans',apple-system, BlinkMacSystemFont, 'Segoe UI',  Oxygen, Ubuntu, Cantarell;
 font-variant-caps: all-petite-caps;
